[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="PosP1" type="Position2D" parent="."]

transform/pos = Vector2( 36.9115, 189.805 )

[node name="PosP2" type="Position2D" parent="."]

transform/pos = Vector2( 216.031, 71.478 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="T1" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[node name="T2" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 256.0
margin/bottom = 32.0

[node name="Panel" type="Panel" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 256.0
margin/bottom = 32.0

[node name="P1pontos" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 5.0
margin/right = 72.0
margin/bottom = 19.0
text = "P1 : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="P2pontos" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 185.0
margin/top = 5.0
margin/right = 252.0
margin/bottom = 19.0
text = "P2 : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="T1" to="." method="_on_T1_timeout"]

[connection signal="timeout" from="T2" to="." method="_on_T2_timeout"]


